fix alerts command